# VoiceMeter

./: Cargo.toml  Readme.md
src/: circular_buffer.rs  connection.rs  fft.rs  lib.rs  main.rs  ui.rs
src/connection/: buffer.rs  channels.rs  managed.rs
src/ui/: horizontal_bar.rs  lce.rs
